--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -2,89 +2,168 @@
 /* --------------------------------------
    Navbar
    -------------------------------------- */
-#imag{
-  width:100px;
-  height:50px;
-}
-.navicon{
-padding-right: 300px;
-}
+   #imag{
+    width:100px;
+    height:50px;
+  }
+  .navicon{
+    padding-right: 300px;
+  }
 /* --------------------------------------
    jumbotron
    -------------------------------------- */
-.jumbotron{
-   margin-bottom: 0px;
-   background-image: url(../../images/image.png);
-   background-repeat: no-repeat;
-   color:pink;
-   min-height:500px;
-   margin-top: 90px;
-}
+   .jumbotron{
+     margin-bottom: 0px;
+     background-image: url(../../images/image.png);
+     background-repeat: no-repeat;
+     color:pink;
+     min-height:500px;
+     margin-top: 90px;
+   }
 /* --------------------------------------
    callout
    -------------------------------------- */
-#call{
-width: 300px;
-}
+   #call{
+    width: 300px;
+  }
 
 /* --------------------------------------
     Styles
-   -------------------------------------- */
-   #head
-   {
-    font-size: 25px;
-    font-family: 'Cormorant Garamond', serif;
-    letter-spacing: 2px;
-    padding-top: 5px;
-   }
-   #imgid
-   {
-    margin-left: 40%;
-    margin-top: 100px;
-   }
-#tab1 p{
+    -------------------------------------- */
+    #head
+    {
+      font-size: 25px;
+      font-family: 'Cormorant Garamond', serif;
+      letter-spacing: 2px;
+      padding-top: 5px;
+    }
+    #imgid
+    {
+      margin-left: 40%;
+      margin-top: 100px;
+    }
+    #tab1 p{
      margin-top: 20px;
      font-family: sans-serif;
      line-height: 30px;
      font-size: 15px;
    }
-#tab2 p{
-  font-family: sans-serif;
-  line-height: 30px;
-  font-size: 15px;
+   #tab2 p{
+    font-family: sans-serif;
+    line-height: 30px;
+    font-size: 15px;
 
-}
-#overview{
-  font-family: sans-serif;
-  line-height: 30px;
-  font-size: 15px;
+  }
+  #overview{
+    font-family: sans-serif;
+    line-height: 30px;
+    font-size: 15px;
 
-}
-#featuresheading{
-  font-family: sans-serif;
+  }
+  #featuresheading{
+    font-family: sans-serif;
 
 
-}
+  }
 
-#feat,#feat1{
-  margin-right: 20px;
-  text-align: center;
-}
-#feat,#feat1 img{
-  margin:0 0 20px;
+  #feat,#feat1{
+    margin-right: 20px;
+    text-align: center;
+  }
+  #feat,#feat1 img{
+    margin:0 0 20px;
 
-}
+  }
+  #myCarousel {
+    margin-top: 60px;
+  }
+
+  .carousel-caption {
+    font-size: 24px;
+  }
+
+  .carousel-caption h4 {
+    font-size: 32px;
+  }
+
+  #myCarousel .item { height: 400px; }
+
+  #slide1 {
+    background: url('../../images/rock1medium.jpg') top center no-repeat;
+  }
+
+  #slide2 {
+    background: url('../../images/rock2.jpg') top center no-repeat;
+  }
+
+  #slide3 {
+    background: url('../../images/rock3medium.jpg') top center no-repeat;
+  }
+
+
+
+
+  @media (max-width: 768px) {
+    
+    #myCarousel .item { height: 310px; }
+    
+    #slide1 {
+      background: url('../../images/rock1small.jpg') top center no-repeat;
+    }
+    
+    #slide2 {
+      background: url('../../images/rock2small.jpg') top center no-repeat;
+    }
+    
+    #slide3 {
+      background: url('../../images/rock3.jpg') top center no-repeat;
+    }
+    
+    .carousel-caption {
+      font-size: 16px;
+    }
+    
+    .carousel-caption h4 {
+      font-size: 22px;
+    }
+    
+  }
+
+  /* Large desktop */
+  @media (min-width: 1200px) {
+
+    #myCarousel .item { height: 500px; }
+    
+    #slide1 {
+      background: url('../../images/rock1.jpg') top center no-repeat;
+    }
+    
+    #slide2 {
+      background: url('../../images/rock2large.jpg') top center no-repeat;
+    }
+    
+    #slide3 {
+      background: url('../../images/rock3large.jpg') top center no-repeat;
+    }
+
+  }
+
+
+
+
+
+
    /* --------------------------------------
       footer
       -------------------------------------- */
-footer{
-     background: #333;
-     color: #eee;
-     font-size: 11px;
-     padding: 20px;
-     margin-top: 20px;
-   }
-   ul.unstyled{
-     list-style: none;
-     padding: 0px;
-   }
+      footer{
+       background: #333;
+       color: #eee;
+       font-size: 11px;
+       padding: 20px;
+       margin-top: 20px;
+     }
+     ul.unstyled{
+       list-style: none;
+       padding: 0px;
+     }
